[package]
name = "mini-rx"
version = "0.1.0"
authors = ["jakobeha <jakobeha@fastmail.com>"]
description = "bare-bones Reactive programming using a central data dependency graph"
homepage = "https://crates.io/crates/mini-rx"
documentation = "https://docs.rs/mini-rx"
repository = "https://github.com/jakobeha/mini-rx"
license = "Apache-2.0"
keywords = ["reactive", "frp", "signal"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derivative = "2.2.0"

[dev-dependencies]
test-log = "0.2.10"
env_logger = "0.9.0"
